# mhost-prism

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  build.rs  deny.toml  prism.dev.toml  prism.example.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: review-2026-03-11.md  roadmap.md  sdd.md
docs/done/: review-2025-03-07.md  roadmap-completed.md  sdd-2025-03-07.md
frontend/: .npmrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: AuthComparison.tsx  DnsCrossLinks.tsx  DnssecView.tsx  LintTab.tsx  QueryInput.tsx  ResultsTable.tsx  ServerComparison.tsx  SuiteNav.tsx  TraceView.tsx  TransportComparison.tsx  parseBatchEvent.test.ts  parseBatchEvent.ts
frontend/src/lib/: history.ts  tokenizer.test.ts  tokenizer.ts
frontend/src/styles/: global.css
src/: circuit_breaker.rs  config.rs  dns_dnssec.rs  dns_raw.rs  dns_trace.rs  error.rs  ip_enrichment.rs  lib.rs  main.rs  parser.rs  query_dedup.rs  record_format.rs  reload.rs  resolver_pool.rs  result_cache.rs  scalar_docs.html  telemetry.rs
src/api/: authcompare.rs  check.rs  compare.rs  dnssec.rs  meta.rs  mod.rs  parse.rs  query.rs  results.rs  trace.rs
src/security/: ip_extract.rs  mod.rs  query_policy.rs  rate_limit.rs
tests/: contract.rs  integration.rs
tests/fixtures/: network_response.json
