[package]
name = "prism"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Web-based DNS debugging service powered by mhost"

[dependencies]
mhost = { version = "0.11", default-features = false, features = ["dot", "doh"] }
netray-common = { version = "0.2.1", features = ["schema", "middleware", "telemetry", "otel", "cors", "server", "prometheus", "spa", "enrichment-cache"] }

# Web framework
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "set-header", "trace", "limit"] }
governor = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# DNS (used by the trace delegation walk)
hickory-proto = { version = "0.25", features = ["dnssec-ring"] }
rand = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.15"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Embedded frontend
rust-embed = "8"
mime_guess = "2"

# Result caching
moka = { version = "0.12", features = ["future"] }

# Hot config reload
arc-swap = "1"

# Request IDs
uuid = { version = "1", features = ["v7"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[patch.crates-io]
netray-common = { path = "../netray-common" }
